// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as off by default 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Switch
    testID="switch"
    thumbColor="#ffffff"
    trackColor={
      Object {
        "false": "#4e4e4e",
        "true": "#41dca4",
      }
    }
    value={false}
  />
</View>
`;

exports[`renders on 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Switch
    testID="switch"
    thumbColor="#ffffff"
    trackColor={
      Object {
        "false": "#4e4e4e",
        "true": "#41dca4",
      }
    }
    value={true}
  />
</View>
`;
